Fix EZP-20300: In cases when left panel is hidden:  - Hiding left panels separator.  - Wrapping main content into "maincontent" and "maincontent-design" divs.  - Preventing unwanted CSS changes in the head.  - Removing "maincontent-desing" left margin in the head.

--- a/design/admin/stylesheets/pagelayout.css
+++ b/design/admin/stylesheets/pagelayout.css
@@ -283,7 +283,6 @@ div.tabs-content.disabled div.tab-content
 
 #maincontent
 {
-    margin: 0 0 0 15em;
     min-height: 200px;
     border-radius: 2px;
     position: relative;
